[package]
name = "material_rs_color_utilities"
version = "0.1.0"
edition = "2021"
authors = ["al3x alex.vacan.bala@gmail.com"]
description = "Color utilites for material 3, for color and theming"
readme = "README.md"
repository = "https://github.com/material-rs/material_color_utilities.git"
license = "LGPL-3.0-or-later OR Apache-2.0"
keywords = ["material", "design", "wasm", "frontend"]
categories = ["wasm", "web-programming", "gui"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
assert_approx_eq = "1.1.0"
